make sure picture is not too large

--- a/src/over-page/over-page.styl
+++ b/src/over-page/over-page.styl
@@ -176,6 +176,8 @@ $$ease-in-opacity()
   #intro-section img
     margin-right: 0;
     width: 100%;
+    object-fit: cover;
+    max-height: 360px;
   
   h4
     margin-top var(--mp-size--5)
@@ -202,4 +204,5 @@ $$ease-in-opacity()
     margin-top var(--mp-size--6);      
 
   #intro-section img
-    width: 70%;    
+    width: 70%;
+    max-height: 100%;
